# tiny-plant-control

./: CMakeLists.txt  Makefile  README.md
include/: matrix_helper.h  tf_descrete.h  tf_statespace.h
lib/: matrix_helper.c  tf_descrete.cpp  tf_statespace.cpp
src/: main.cpp
